--- a/style/adminstyle.css
+++ b/style/adminstyle.css
@@ -5,7 +5,7 @@ body{margin-top:20px;}
 .indicators_fixed #indicators_fixed_progress{width:0%; height: 100%;background-color: #428bca;}
 .indicators_plase_mini > a{color: #99ca3c; font-weight: 900; }
 #count_errors{display: block;    float: right;    text-align: center;    color: #fff;    border-radius: 10px;    padding: 2px;    background: rgba(214, 26, 26, 0.75);}
-#parsing_progress_list [class*="col-"] {
+#Creating [class*="col-"],#Updating [class*="col-"] {
     padding-top: 1rem;
     padding-bottom: 1rem;
     background-color: rgba(86,61,124,.15);
