--- a/style/adminstyle.css
+++ b/style/adminstyle.css
@@ -4,7 +4,7 @@ body{margin-top:20px;}
 .indicators_fixed{position: fixed;  bottom: 0px; }
 .indicators_fixed #indicators_fixed_progress{width:0%; height: 100%;background-color: #428bca;}
 .indicators_plase_mini > a{color: #99ca3c; font-weight: 900; }
-#count_errors{display: block;    float: right;    text-align: center;    color: #fff;    border-radius: 10px;    padding: 2px;    background: rgba(214, 26, 26, 0.75);}
+#cr_count_errors,#up_count_errors{display: block;    float: right;    text-align: center;    color: #fff;    border-radius: 10px;    padding: 2px;    background: rgba(214, 26, 26, 0.75);}
 #Creating [class*="col-"],#Updating [class*="col-"] {
     padding-top: 1rem;
     padding-bottom: 1rem;
@@ -13,3 +13,8 @@ body{margin-top:20px;}
 }
 .progress{    margin-bottom: 0px;}
 .progress-bar.active, .progress.active .progress-bar{animation: reverse progress-bar-stripes 2s linear infinite, animate-positive 2s;}
+tfoot input {
+    width: 100%;
+    padding: 3px;
+    box-sizing: border-box;
+}
